# sharemarket

./: .env.example  .gitignore  README.md  SETUP_COMPLETE.md  VIRTUAL_ENV_GUIDE.md  __init__.py  activate.bat  activate.sh  compare_strategies.py  compress_project.py  diagnose.py  display_utils.py  fix_pip.py  fno_breakout_detector.py  fno_scanner_menu.py  install_dependencies.py  install_dotenv.py  main.py  pyproject.toml  quick_setup.bat  requirements-minimal.txt  requirements.txt  run_webapp.bat  setup.bat  setup.py  setup.sh  setup_poetry.py  setup_robust.py  test_data_fix.py  test_imports.py  test_setup.py  test_strategies.py  verify_dotenv.py
src/analysis/: options_signal_generator.py
src/config/: settings.py
src/core/indicators/: technical_indicators.py
src/core/strategies/: base_strategy.py  intraday_strategy.py  swing_trading_strategy.py
src/services/: fno_service.py  index_options_service.py  market_service.py  stock_scanner.py
src/utils/: helpers.py  warnings_handler.py
